--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "k",
+  "name": "lab-02-tools-and-context",
   "version": "1.0.0",
   "description": "![cf](https://i.imgur.com/7v5ASc8.png) lab-02-tools-and-context ======",
   "main": "index.js",
-  "directories": {
-    "test": "mocha"
   },
   "scripts": {
     "test": "mocha"
