--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "![cf](https://i.imgur.com/7v5ASc8.png) lab-02-tools-and-context ======",
   "main": "index.js",
   "directories": {
+    "lib": "lib",
     "test": "test"
   },
   "dependencies": {
