--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jest": "^21.2.1"
   },
   "devDependencies": {
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "should": "^13.1.3"
   },
   "scripts": {
     "test": "jest"
