--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "index.js",
   "directories": {
     "lib": "lib",
-    "test": "test"
+    "test": "jest"
   },
   "dependencies": {
+    "cli": "^1.0.1",
     "express": "^4.16.2",
     "jest": "^21.2.1"
-  },
-  "devDependencies": {
-    "mocha": "^4.0.1",
-    "should": "^13.1.3"
   },
   "scripts": {
     "test": "jest"
